tests/types_first/import_dynamic_dep.js
// @flow
const x = require('./import_dynamic');
x.then(y => {
  (y: empty); // error: number ~> empty
});
